api/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress 
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Xss-Protection: 1; mode=block";
spec:
  rules:
    - host: "*.qc-saas-api.erxes.io"
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: api
              servicePort: 3100

    - host: "*.qc-saas-integrations.erxes.io"
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: integrations
              servicePort: 6100
